// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package ns;

option go_package = "namespacelabs.dev/foundation/std/secrets";

message Secrets {
    repeated Secret secret = 1;
}

message Secret {
    string name = 1;
    repeated Provision provision = 2;
}

enum Provision {
    PROVISION_UNSPECIFIED = 0; // Will default to inline.
    PROVISION_INLINE = 1;
    PROVISION_AS_FILE = 2;
}

message SecretDevMap {
    repeated Configure configure = 1;

    message Configure {
        string package_name = 1;
        repeated SecretSpec secret = 2;
    }

    message SecretSpec {
        string name = 1;
        string from_path = 2;
        string value = 3;
    }
}

message Value {
    string name = 1;
    repeated Provision provision = 2;
    string path = 3;  // Filled if PROVISION_AS_FILE is selected.
    bytes value = 4;  // Filled if PROVISION_INLINE is selected.
}